--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "twentytwenty",
-  "productName": "twentytwenty",
+  "name": "twenty-twenty",
+  "productName": "twenty twenty",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "A desktop app for setting reminders to take frequent breaks.",
   "main": "src/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -19,12 +19,12 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {"icon":"src/assets/icon.ico", "all":true},
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "twentytwenty"
+            "name": "twenty twenty"
           }
         },
         {
