Add github release configurations

--- a/package.json
+++ b/package.json
@@ -22,6 +22,17 @@
       "packagerConfig": {
         "icon":"src/assets/icon"
       },
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "m-visaya",
+              "name": "twenty-twenty"
+            }
+          }
+        }
+      ],
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
