--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "icon":"src/assets/icon"
+        "icon": "src/assets/icon"
       },
       "publishers": [
         {
@@ -66,6 +66,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
+    "@electron-forge/publisher-github": "^6.0.0-beta.63",
     "electron": "18.0.3"
   }
 }
