--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,4 +21,6 @@ jobs:
       - name: install dependencies
         run: npm install
       - name: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: npm run publish
