--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,5 +22,5 @@ jobs:
         run: npm install
       - name: publish
         env:
-          GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: npm run publish
